tests/analyzer/ok/inc/part.api


type inner_type = u32;