tests/analyzer/fail/duplicate-symbol-two-trivial.api
// expected: 1007

type func1 = u32;
type func1 = u32;
